--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top right grid layour</title>
+    <title>Top right grid layout</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -18,13 +19,13 @@
             text
         </div>
         <div class="box1">
-            box1
+            square1
         </div>
         <div class="box2">
-            box2
+            square2
         </div>
         <div class="box3">
-            box3
+            square3
         </div>
         <div class=footer>
             footer
