fixed the square promblem
just a spelling error

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="logonav">
-            logo
+            logonav
         </div>
         <div class="header">
             header
@@ -18,13 +18,13 @@
         <div class="textarea">
             text
         </div>
-        <div class="box1">
+        <div class="square1">
             square1
         </div>
-        <div class="box2">
+        <div class="square2">
             square2
         </div>
-        <div class="box3">
+        <div class="square3">
             square3
         </div>
         <div class=footer>
